<?xml version="1.0" encoding="utf-8"?>

<!--
  dLeyna

  Copyright (C) 2013 Intel Corporation. All rights reserved.

  This program is free software; you can redistribute it and/or modify it
  under the terms and conditions of the GNU Lesser General Public License,
  version 2.1, as published by the Free Software Foundation.

  This program is distributed in the hope it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
  for more details.

  You should have received a copy of the GNU Lesser General Public License
  along with this program; if not, write to the Free Software Foundation, Inc.,
  51 Franklin St - Fifth Floor, Boston, MA 02110-1301 USA.

  Tom Keel <thomas.keel@intel.com>
-->

<resources>
    <string name="all">All Tests</string>
    <string name="app_name">Test Native Libs</string>
    <string name="clear">Clear</string>
    <string name="go">Go</string>
    <string name="kill">Kill</string>
    <string name="none">No Tests</string>
    <string name="pref_activity_name">Test Native Libs\nSettings</string>
    <string name="select">Tests&#8230;</string>
    <string name="select_all">Select ALL Tests</string>
    <string name="select_none">Select NO Tests</string>
    <string name="select_some">Select Tests</string>
    <string name="skip">Skip</string>
</resources>
